# bootstraphistogram

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE.txt  README.md  mkdocs.yml  pyproject.toml  readthedocs.yml  requirements.txt  setup.py  setup.sh  tox.ini
.github/workflows/: ci.yml  publish.yml
bootstraphistogram/: __init__.py  _version.py  bootstraphistogram.py  plot.py
docs/: api.rst  conf.py  examples.rst  index.md  index.rst  introduction.rst  requirement.txt  requirements.txt  test_examples.py
docs/examples/: filling_example.py
docs/pyplots/: complex_example.py  efficiency_example.py  errorbar_example.py  fillbetween_example.py  scatter_example.py  step_example.py  twodim2_example.py  twodim_example.py
scripts/: bootstrap_histogram_manage.py  profile_bootstrap_histogram.py
src/bootstraphistogram/: __init__.py  _version.py  bootstrapefficiency.py  bootstraphistogram.py  bootstrapmoment.py  plot.py  valuewithsamples.py
tests/: test_bootstrapefficiency.py  test_bootstraphistogram.py  test_bootstraphistogram2d.py  test_bootstraphistogram_performance.py  test_bootstrapmoment.py  test_plot.py  test_plot2d.py  test_standarderror.py  test_valuewithsamples.py  test_version.py
